--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
